# Pulse

./: .gitignore  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile
pulse/: __main__.py  cli.py  main.py
pulse/api/quote/: mds_spi_lite.py
pulse/api/trade/: oes_facade.py  oes_spi_lite.py
pulse/config/: mds_kuanrui.conf  oes_kuanrui.conf
pulse/core/automation/: scheduler.py
pulse/core/backtest/: backtester.py
pulse/core/execution/: broker.py  order_manager.py  trade_models.py
pulse/core/order_management/: order_executor.py  order_manager.py  sequence.py
pulse/core/risk/: risk_manager.py
pulse/core/strategy/: base_strategy.py  demo.py
pulse/core/strategy/rule/: ma_cross.py
pulse/core/utils/: config.py  logger.py
pulse/scripts/: L2mdscheck.py  live_oes_sim.py  mds_snapshot_trade.py  sector_trader_streamlit.py
pulse/visualization/: dashboard.py
tests/: test_oes.py  test_trade.py
