
[project]
name = "pulse"
version = "0.1.0"
description = "Quant trading framework scaffold"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "numpy",
    "pydantic",
    "plotly",
    "scipy"
]

[tool.setuptools.packages.find]
where = ["pulse"]
